src/objects/Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Type__c</fullName>
        <label>Answer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Answer__c</fullName>
        <label>Date Answer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Earned_Weight__c</fullName>
        <label>Earned Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Free_Text_Answer__c</fullName>
        <label>Free Text Answer</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mutiselect_Answer__c</fullName>
        <label>Mutiselect Answer</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Option_Text__c</fullName>
        <label>Option Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PPI_Household_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PPI Household Data</label>
        <referenceTo>PPI_Household_Data__c</referenceTo>
        <relationshipLabel>Answer</relationshipLabel>
        <relationshipName>Answer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Text__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answer</relationshipLabel>
        <relationshipName>Answer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Single_Select_Answer__c</fullName>
        <label>Single Select Answer</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>Ans-{0000000}</displayFormat>
        <label>Answer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>